--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "json-rpc-2.0": "^1.7.0",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
