--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "rexchoppers",
   "main": "index.js",
   "scripts": {
-    "run": "tsc && node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
